--- a/Order_service/Dockerfile
+++ b/Order_service/Dockerfile
@@ -15,4 +15,10 @@ COPY . .
 EXPOSE 8000
 
 # Run migrations and start the Django server
-CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+CMD ["sh", "-c", "
+    until pg_isready -h postgres_db -p 5432; do
+        echo 'Waiting for PostgreSQL...';
+        sleep 2;
+    done;
+    python manage.py migrate &&
+    python manage.py runserver 0.0.0.0:8000"]
